--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create-drop
+
+#spring.security.user.name=user1
+#spring.security.user.password=12345
